--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Papara ile 7/24 ücretsiz para gönder, chargeback ile harcamalarını 120 gün içinde iade kazan!">
+
+    <!-- OG -->
+    <meta property="og:title" content="Chargeback - Papara" />
+    <meta property="og:description" content="Papara ile 7/24 ücretsiz para gönder, faturalarını öde, bütçeni yönet! Ücretsiz Papara Card ile tüm dünyada ve internette borçlanmadan harcarken kazan!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://paparachargeback.onrender.com/" />
+    <meta property="og:image" content="/PAPARA.png" />
     <title>Chargeback - Papara</title>
     
   </head>
